[package]
name = "llml_simd"
version = "0.1.0"
edition = "2021"

[features]
force_naive = []
use_avx = []
random = ["rand"]
serialize = ["serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
derive_more = "0.99"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
llml_simd_proc = { version = "0.1", path = "./llml_simd_proc" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
serde_json = "1.0"

[[bench]]
name = "main"
harness = false