[package]
name = "llml_simd"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aandreba/llml_simd"
description = "SIMD (Single Instruction Multiple Data) extension for a variety of targets"
keywords = ["simd", "sse", "webassembly", "wasm", "no_std"]
categories = ["embedded", "hardware-support", "mathematics", "no-std", "wasm"]

[features]
default = ["use_std"]
use_std = []
force_naive = []
use_avx = []
random = ["rand"]
serialize = ["serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
derive_more = { version = "0.99", default-features = false, features = ["not"] }
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
llml_simd_proc = { version = "0.1", path = "./llml_simd_proc" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"

[[bench]]
name = "main"
harness = false