[package]
name = "llml_simd_proc"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Procedural macros for llml_simd"
keywords = ["simd", "sse", "webassembly", "wasm", "no_std"]
categories = ["embedded", "hardware-support", "mathematics", "no-std", "wasm"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
derive_more = "0.99"