[package]
name = "wasm-export"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM SIMD bindings"
keywords = ["simd", "sse", "webassembly", "wasm", "no_std"]
categories = ["embedded", "hardware-support", "mathematics", "no-std", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
llml_simd = { path = "../" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"