[package]
name = "llml_simd"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aandreba/llml_simd"
description = "WASM SIMD bindings"
keywords = ["simd", "sse", "webassembly", "wasm", "no_std"]
categories = ["embedded", "hardware-support", "mathematics", "no-std", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
llml_simd = { path = "../", features = ["random"] }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.4"